--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "ora": "^7.0.1",
     "otplib": "^12.0.1",
     "puppeteer": "^21.11.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "request-promise-native": "^1.0.9",
     "rimraf": "^6.0.1",
     "sharp": "^0.33.5",
